@@ -26,6 +26,9 @@ Zope Changes
 
     Bugs Fixed
 
+      - Collector #1976: FTP STOR command would load the file being
+        uploaded in memory. Changed to use a TemporaryFile.
+
       - Collector #1904: On Mac OS X avoid a spurious OSError when
         zopectl exits.
 
